--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-server.port=8081
-
 spring.application.name=Mottu Track API
 
-# Datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/mottu
-spring.datasource.username=postgres
-spring.datasource.password=SKU#119002Gabriel
+server.port=${PORT:8080}
+
+# Datasource via App Settings
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.hikari.maximum-pool-size=5
 
 # JPA/Hibernate
@@ -21,5 +21,4 @@ spring.flyway.baseline-on-migrate=true
 # Thymeleaf
 spring.thymeleaf.cache=false
 
-# Security - página de login custom
 server.error.whitelabel.enabled=false
