--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
   <properties>
     <java.version>17</java.version>
     <spring-boot.version>3.3.3</spring-boot.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 
   <dependencyManagement>
@@ -81,6 +83,7 @@
 
   <build>
     <plugins>
+      <!-- Java 17 -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -89,10 +92,19 @@
           <release>17</release>
         </configuration>
       </plugin>
+
+      <!-- Gera o fat-jar com o Boot loader automáticamente no 'mvn package' -->
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>${spring-boot.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
